--- a/index.html
+++ b/index.html
@@ -844,12 +844,12 @@ footer {
 @media (max-width: 768px) {
     /* フッター全体の文字サイズ */
   footer {
-    font-size: 9px;
+    font-size: 12px;
   }
 
   /* コピーライト */
   .footer-bottom {
-    font-size: 8px;
+    font-size: 10px;
   }
 }
   
@@ -874,7 +874,7 @@ footer {
   .footer-tel,
   .footer-mail {
     display: block;
-    margin-top: 6px;
+    margin-bottom: 10px;
   }
 
   /* 会社名とプライバシーポリシーは横並び */
