--- a/index.html
+++ b/index.html
@@ -844,12 +844,12 @@ footer {
 @media (max-width: 768px) {
     /* フッター全体の文字サイズ */
   footer {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   /* コピーライト */
   .footer-bottom {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
   
@@ -863,6 +863,7 @@ footer {
     max-width: 320px;
     margin: 0 auto;
     text-align: left;
+    justify-content: center;
   }
 
   /* リンクを縦並びに */
@@ -874,11 +875,11 @@ footer {
   .footer-tel,
   .footer-mail {
     display: block;
-    margin-bottom: 10px;
   }
 
   /* 会社名とプライバシーポリシーは横並び */
   .footer-bottom {
+    margin-top: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
