--- a/index.html
+++ b/index.html
@@ -412,6 +412,17 @@ h2 {
 
     font-family: 'M PLUS Rounded 1c', sans-serif;
   }
+  
+  /* ご利用の流れ → 下の余白を小さく */
+.toggle-button流れ {
+  margin-bottom: 8px;   /* ← 今より小さく */
+}
+
+/* ご利用料金 → 上は近く、下は広く */
+.toggle-button料金 {
+  margin-top: 0;
+  margin-bottom: 32px;  /* ← アクセスと離す */
+}
 
   /* 初期は閉じる */
   .content流れ,
