--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ main {
   </iframe>
 </section>
 
-<h2 class="pc-title" id="pdf">サービス自己評価表</h2>
+<h2 class="pc-title" id="pdf">サービス自己評価表(PDF)</h2>
 
 <!-- ① 文章① -->
 <p class="pdf-text">
