--- a/index.html
+++ b/index.html
@@ -871,6 +871,10 @@ footer {
     margin: 0 auto;
     text-align: left;
   }
+  
+  .zip {
+    display: block;
+  }
 
   /* 住所・TEL・MAIL を縦並び */
   .footer-address a {
