--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ h2 {
 .toggle-container流れ,
 .toggle-container料金 {
   text-align: center;
-  margin: 60px auto;
+  margin: 40px auto;
 }
 
 /* PC：ボタン非表示 */
@@ -518,7 +518,7 @@ h2 {
   position: absolute;
   left: 0;
   top: 5px;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 /* 郵便番号 */
@@ -726,7 +726,7 @@ h2 {
 
 /* ================= 説明文 ================= */
 .pdf-text {
-  margin: 22px 0 10px;
+  margin: 10px 0 15px;
   text-align: center;
   font-size: 16px;
   line-height: 1.8;
@@ -828,6 +828,7 @@ footer {
 
 .footer-mail {
   font-size: 1em;
+  margin-bottom: 5px;
 }
 
 /* 下段コピーライト・プライバシーリンク */
