--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ h2 {
 ================================================= */
 .contact-cta {
   text-align: center;
-  margin: 50px 0 40px;
+  margin: 50px 0 60px;
   position: relative;
   z-index: 1;
 
@@ -730,7 +730,7 @@ h2 {
   text-align: center;
   font-size: 16px;
   line-height: 1.8;
-  color: #9F987D;
+  color: #635656;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
@@ -745,7 +745,7 @@ h2 {
   /* 説明文 */
   .pdf-text {
     font-size: 16px;
-    margin-bottom: 7px;
+    margin-bottom: 6px;
     padding: 0 10px;
   }
 
