--- a/index.html
+++ b/index.html
@@ -916,11 +916,11 @@ footer {
   .footer-tel,
   .footer-mail {
     display: block;
-    margin-bottom: 4px;
   }
 
   /* お問い合わせ｜プライバシーポリシー */
   .footer-links {
+    margin-top: 4px;
     display: inline-flex;        /* 横並び */
     justify-content: center;     /* 全体中央寄せ */
     align-items: center;
