--- a/index.html
+++ b/index.html
@@ -1098,11 +1098,8 @@ main {
 </div>
 
 <div class="pdf-section self-buttons program">
-  <a href="支援プログラム1.pdf" target="_blank" class="pdf-link">
-    支援プログラム1
-  </a>
-  <a href="支援プログラム2.pdf" target="_blank" class="pdf-link">
-    支援プログラム2
+  <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
+    支援プログラム
   </a>
 </div>
   
