--- a/index.html
+++ b/index.html
@@ -850,7 +850,6 @@ footer {
   align-items: center;
   justify-items: center;               /* 左右リンクも中央寄せ */
   font-size: 12px;
-  margin-bottom: 2px;
   width: 100%;
 }
 
@@ -903,7 +902,6 @@ footer {
 
   .footer-links {
     font-size: 12px;
-    margin-bottom: 2px;
     grid-template-columns: 1fr auto 1fr; /* 中央｜固定 */
   }
 
@@ -924,6 +922,7 @@ footer {
 html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 body {
