--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ main {
 
 <!-- ① 文章① -->
 <p class="pdf-text">
-  …事業所における自己評価結果…
+  ◯事業所における自己評価結果
 </p>
 
 <!-- ボタン2個 -->
@@ -1082,7 +1082,8 @@ main {
 
 <!-- ② 文章② -->
 <p class="pdf-text">
-  …保護者等からの事業所評価の集計結果…
+  ･････････････････････････････････････<br>
+  ◯保護者等からの事業所評価の集計結果
 </p>
 
 <!-- ボタン2個 -->
@@ -1095,6 +1096,10 @@ main {
     児童発達支援
   </a>
 </div>
+
+<p class="pdf-text">
+  ･････････････････････････････････････
+</p>
 
 <div class="pdf-section self-buttons program">
   <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
