--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;  /* ボタン同士の間隔 */
-    margin-top: 5px; /* テキストとの間隔は狭く */
+    margin-top: 2px;
     margin-bottom: 20px; /* セクション下余白 */
   }
 
@@ -766,7 +766,7 @@ h2 {
 
   /* セクション間余白調整 */
   .pdf-text + .pdf-section {
-    margin-top: 20px; /* 次テキストまでの間隔 */
+    margin-bottom: 20px; /* 次テキストまでの間隔 */
   }
 }
 
