--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ h2 {
 
   /* セクション間余白調整 */
   .pdf-text + .pdf-section {
-    margin-bottom: 20px; /* 次テキストまでの間隔 */
+    margin-top: 20px; /* 次テキストまでの間隔 */
   }
 }
 
