--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;  /* ボタン同士の間隔 */
-    margin-top: 2px;
+    margin-top: 0;
     margin-bottom: 20px; /* セクション下余白 */
   }
 
